k8s/tekton-dashboard/tekton-dashboard-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: tekton-dashboard
  labels:
    app.kubernetes.io/component: tekton-dashboard
spec:
  to:
    kind: Service
    name: tekton-dashboard
    weight: 100
  port:
    targetPort: 9097
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
